[gd_scene load_steps=4 format=3 uid="uid://dt7rhhabjhbvt"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_8ndhk"]
[ext_resource type="Texture2D" uid="uid://c211of1yjljgw" path="res://icon.svg" id="2_gojew"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cead5"]
size = Vector2(62, 61)

[node name="Player" type="CharacterBody2D"]
collision_mask = 10
script = ExtResource("1_8ndhk")
player_image = ExtResource("2_gojew")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_cead5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_gojew")

[node name="BulletCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BulletCooldown" to="." method="_on_bullet_cooldown_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
